code25_all/scala/17333741.txt
null
scala> val (a: String, b: String) = ("a", "b")
a: String = a
b: String = b

scala> val (a: String, b: String) = (null, null)
<console>:12: error: pattern type is incompatible with expected type;
 found   : String
 required: Null
       val (a: String, b: String) = (null, null)
               ^
<console>:12: error: pattern type is incompatible with expected type;
 found   : String
 required: Null
       val (a: String, b: String) = (null, null)

scala> val a: String = null
a: String = null

